* Rewrote message icon handler for clarity: split into multiple named methods, list is no longer a child of the body itself, body click handler is removed when list is closed, etc. It also saves a few bytes of JS and CSS, not many, but that's still a plus. (topic.js, index.member.css, sections.css)
! I'm not sure why I've been using $(document).find() instead of just $() in some code, as well as using .bind/.unbind when I switched to modern jQuery (and .on/.off) long ago, but... I guess it happens even to the best. (topic.js)

- Unused class no-flex. (sections.css)

! Fixed code blocks in Firefox. Just like Chrome, Firefox doesn't like white-space: pre blocks when they only generate an horizontal scrollbar, but it doesn't cause the same glitch, and it can't be fixed the same way, so I'm disabling flex on these posts when such a situation occurs. It's very unlikely they'd benefit from flexbox anyway, as flex is mostly for very, very short posts. (topic.js)

--- a/Themes/default/skins/index.member.css
+++ b/Themes/default/skins/index.member.css
@@ -219,27 +219,20 @@ for guests, because most of the time it won't be an option.
 .iconbox
 	text-align: center
 	cursor: pointer
-	padding: 3px 3px 1px
 	:hover
 		padding: 2px 2px 0
 		background: #fff
 		border: 1px solid #adadad
 
 #iconlist
-	text-align: center
 	cursor: pointer
 	position: absolute
-	padding: 3px
+	z-index: 10
+	margin: 0 -3px
 	border: 1px solid #adadad
 	background: #fff
-	.item
-		text-align: center
-		padding: 3px 3px 1px
-		margin-left, margin-right: auto
-		border: 1px solid #fff
-		:hover
-			border: 1px dotted gray
-			background: #e0e0f0
+	.item:hover
+		background: #e0e0f0
 
 /* And for the infraction history. Guests cannot see it.
 ------------------------------------------------- */
